--- a/README
+++ b/README
@@ -1,4 +1,12 @@
-#usage
-docker service  create -e "VIRTUAL_HOST=**.com" **
-docker run -d  -v /var/run/docker.sock:/tmp/docker.sock:ro -p 8095:80 wanghaibo/ingress 
+# usage
+```
+//service with network will create a vip 
+docker network create -d overlay test
+docker service  create -e "VIRTUAL_HOST=**.com" --network test ** 
+docker run -d  -v /var/run/docker.sock:/tmp/docker.sock:ro -p 8095:80 --network test wanghaibo/ingress 
+```
 
+# build
+```
+docker build ./ -t wanghaibo/ingress -f Dockerfile.alpine  --no-cache 
+```
